Finished shit html header

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
-.days {
-	margin:0px;
+.rounded {
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
