Edited week- and globalsearch view

--- a/css/main.css
+++ b/css/main.css
@@ -107,3 +107,15 @@
 	height:210px;
 	position:relative;
 }
+
+.weekbg {
+	background-color:#FFFFFF;
+}
+
+.weekbg:hover {
+	background-color:#EEEEEE;
+}
+
+.searchPointer {
+	cursor:pointer;	
+}
