--- a/css/main.css
+++ b/css/main.css
@@ -43,11 +43,12 @@
 
 .spacer100 { 
 	height: 100px;
-	width: 90%;
+	width: 100%;
 }
 
 .akkupositivspace {
 	height: 200px;
+	width: 100%;
 	background-color: #ffffff;
 	position: relative;
 }
@@ -64,7 +65,8 @@
 
 .akkuline {
 	background-color: #000000;
-	width: 100%;
+	left: 10%;
+	width: 70%;
 	height: 3px;
 }
 
